--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 @import "./modal2.css";
+@import "./hamburger.css";
 
 
 *{
@@ -8,6 +9,8 @@
 body { 
   padding: 0 !important 
 }
+
+
 
 #go_top{
   width: 50px;
@@ -20,6 +23,7 @@ body {
   background-color: #eeeeee;
   border-radius: 10px;
   box-shadow: 1px 2px 2px 0px #00000040;
+  z-index: 2;
 }
 
 span.now_page{
@@ -36,6 +40,8 @@ header.header{
   background-color: rgba(255, 255, 255, 1);
   /* border-bottom: 1.5px solid #eeeeee; */
   z-index: 10;
+  display: flex;
+  align-items: center;
 } 
 
 .navFixed{
@@ -53,6 +59,7 @@ header.header{
   z-index: 10;
 }
 
+
 img.logo_img{
   width: 120px;
 }
@@ -68,7 +75,7 @@ div.nav_block{
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 15px;
@@ -175,3 +182,22 @@ div.container{
   margin-top: -16px;
   height: 100%;
 }
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+  header.header{
+    min-width: 100%;
+    justify-content: space-between;
+  }
+  nav.nav, div.login_signup_block div.mt-3{
+    display: none;
+  }
+  div.hamburger{
+    display: inline-flex;
+  }
+  .navFixed{
+    width: 100%;
+  }
+  div.nav_parent{
+    width: 100%;
+  }
+} 
