--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -8,10 +8,13 @@
 
  div.hamburger{
   display: none;
+  position: absolute;
+  right: 5%;
  }
 
  .hamburger {
-  padding: 15px 15px;
+  /* padding: 15px 15px; */
+  padding-right: 10px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
@@ -54,7 +57,7 @@
   top: 50%;
   margin-top: -2px; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 40px;
+    width: 32px;
     height: 4px;
     background-color: #000;
     border-radius: 4px;
@@ -66,9 +69,9 @@
     content: "";
     display: block; }
   .hamburger-inner::before {
-    top: -10px; }
+    top: -8px; }
   .hamburger-inner::after {
-    bottom: -10px; }
+    bottom: -8px; }
 
     /*
    * Spin
