--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ div.index_first_banner_slogan{
 
 div.index_first_banner_introduction{
   line-height: 250%;
-  font-size: 15px;
+  font-size: 14px;
   padding-top: 20px;
   padding-bottom: 36px;
 }
@@ -106,6 +106,9 @@ img.scroll_down{
     flex-direction: column;
     height: auto;
   }
+  div.index_first_banner_slogan{
+    font-size: 32px;
+  }
 
   div.index_scroll_block{
     margin-top: 90px;
@@ -132,8 +135,8 @@ div.steps_container{
 div.steps_guide{
   /* text-align: left; */
   /* border: 1px solid black; */
-  display: inline-block;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
   width: 1080px;
   margin: 0 auto 40px;
   height: 80px;
@@ -246,15 +249,26 @@ a.step_one_btn:hover{
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px){
-  
+   
   div.steps_container{
     width: 100%;
   }
-
+ 
   div.steps_guide{
     width: 100%;
     margin-top: 30px;
+    justify-content: space-between;
   }
+  div.steps_guide div.steps_intro{
+    font-size: 16px;
+    width: 100%;
+    min-width: 320px;
+    transform: translateX(-10%);
+  }
+  img.bird_guide{
+    height: 60px; 
+  }
+
   /*步驟一*/
   div.step_one_block{
     display: flex;
@@ -429,15 +443,27 @@ embed.img_slide{
 
 button.slick-prev.slick-arrow{
   left: 0;
+  z-index: 1;
 }
 
 button.slick-next.slick-arrow{
   right: 0;
 }
 
+/* embed.prev{
+  width: 30px;
+  left: 0;
+}
+
+embed.next{
+  width: 30px;
+  right: 0;
+} */
+
 .slick-prev.slick-arrow:before, .slick-next.slick-arrow:before{
   color: #616870;
   display: block;
+  font-size: 20px;
   } 
 
 
@@ -455,6 +481,7 @@ button.slick-next.slick-arrow{
     max-width: 100vw;
     width: 100%;
     overflow: hidden;
+    /* border: 1px solid red; */
   }
   .carousel_box{
     margin: 0 auto;
@@ -530,6 +557,7 @@ a.comment_link:hover{
     min-width: 100%;
     height: auto;
     flex-direction: column;
+    align-items: center;
   }
   div.index_comments{
     width: 90%;
