--- a/css/header.css
+++ b/css/header.css
@@ -36,12 +36,13 @@ span.now_page{
 header.header{
   /* margin: 0 auto; */
   min-width: 1200px;
-  padding-top: 10px;
+  /* padding-top: 10px; */
   background-color: rgba(255, 255, 255, 1);
   /* border-bottom: 1.5px solid #eeeeee; */
   z-index: 10;
   display: flex;
   align-items: center;
+  height: 66px;
 } 
 
 .navFixed{
@@ -49,7 +50,7 @@ header.header{
   top: 0;
   left: 0;
   right: 0;
-  height: 66px;
+  height: 60px;
   opacity: .91;
   padding-top: 0;
   transition: all 0.3s;
@@ -187,26 +188,127 @@ div.container{
   header.header{
     min-width: 100%;
     justify-content: space-between;
-    position: relative;
   }
 
   a.logo_top{
     margin-left: 5%;
     width: 80%;
   }
+
+  .navFixed{    
+    width: 100%;
+  }
+
+  nav.nav{
+    margin: 0;
+    width: 100%;
+    height: 450px;
+    /* border: 1px solid red; */
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(40, 105, 209, 0.5) 348.45%);
+  }
+
+  div.nav_block{
+    position: relative;
+  }
+
+  ul.nav_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+    transform: translateY(10%);
+  }
+
+  ul.nav_list li{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  nav.nav ul.nav_list > li:active{
+    background-color: rgba(247, 204, 197, 0.5);
+  }
+
   nav.nav, div.login_signup_block{
     margin-right: 0;
+    /* border: 1px solid red; */
+    position: absolute;
+    
+  }
+  div.login_signup_block{
+    width: 100%;
+    /* bottom: 5%; */
+    flex-direction: column;
+    text-align: center;
+  }
+
+  div.login_signup_block div.mt-3{
+    width: 100%;
+    bottom: 0;
+    transform: translateY(820%);
+    /* position: absolute; */
+  }
+
+
+
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
+    /* position: absolute; */
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+  }
+
+  nav.nav > ul.nav_list > li > div.solution_block:hover ul.solution_list{
+    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li{
+    width: 90px;
+  }
+
+
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:focus{
+    background-color: rgba(247, 204, 197, 0.5);
+    border-radius: 5px;
+    text-decoration: underline;
+  }
+  
+  div.solution_block{
+    padding: 0; 
+    width: 100%;
+    text-align: center;
+    height: 80px;
+  }
+
+  /* span.triangle{
+    padding-bottom: 3px;
+    border-bottom: 1px solid black;
+  } */
+  span.triangle::after{
+    display: none;
   }
 
   nav.nav, div.login_signup_block div.mt-3{
     display: none;
   }
+
+
   div.hamburger{
     display: inline-flex;
   }
-  .navFixed{
-    width: 100%;
-  }
+  
+
   div.nav_parent{
     width: 100%;
     /* border: 1px solid blue; */
