--- a/css/header.css
+++ b/css/header.css
@@ -39,10 +39,11 @@ header.header{
   /* padding-top: 10px; */
   background-color: rgba(255, 255, 255, 1);
   /* border-bottom: 1.5px solid #eeeeee; */
-  z-index: 10;
+  z-index: 20;
   display: flex;
   align-items: center;
   height: 66px;
+  margin: 0 !important;
 } 
 
 .navFixed{
@@ -51,7 +52,7 @@ header.header{
   left: 0;
   right: 0;
   height: 60px;
-  opacity: .91;
+  /* opacity: .91; */
   padding-top: 0;
   transition: all 0.3s;
   width: 100%;
@@ -87,9 +88,9 @@ a.logo_top{
 }
 
 nav.nav{
-  width: 500px;
+  width: 480px;
   height: 60px;
-  margin: 0 60px 0 80px;
+  margin: 0 50px 0 70px;
 }
 
 nav.nav ul.nav_list{
@@ -172,7 +173,7 @@ nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:hove
 div.login_signup_block{
   width: 240px;
   height: 60px;
-  margin-right: 40px;
+  /* margin-right: 40px; */
   display: flex;
   align-items: center;
   padding: 0;
@@ -243,17 +244,22 @@ div.container{
   }
   div.login_signup_block{
     width: 100%;
-    /* bottom: 5%; */
     flex-direction: column;
     text-align: center;
   }
 
   div.login_signup_block div.mt-3{
     width: 100%;
-    bottom: 0;
     transform: translateY(820%);
-    /* position: absolute; */
   }
+
+  
+
+  div.login_signup_block button.btn_login{
+    background-color: #FFFFFF;
+  }
+
+ 
 
 
 
