--- a/css/footer.css
+++ b/css/footer.css
@@ -192,7 +192,7 @@ button.btn-footer-modal:hover{
 
   div.copyrights_statement{
     position: absolute;
-    bottom: -150px;
+    bottom: -36%;
     width: 90%;
     border-top: 1px solid black;
   }
