--- a/css/header.css
+++ b/css/header.css
@@ -10,8 +10,7 @@ body {
   padding: 0 !important 
 }
 
-
-
+/*回到最上方的按鈕*/
 #go_top{
   width: 50px;
   padding: 10px;
@@ -26,6 +25,7 @@ body {
   z-index: 2;
 }
 
+/*顯示當前頁面*/
 span.now_page{
   border-bottom: 1px solid black;
   padding: 5px 0;
@@ -46,6 +46,8 @@ header.header{
   margin: 0 !important;
 } 
 
+/*====== 導覽列固定在頁面最上方 ======*/
+
 .navFixed{
   position: sticky;
   top: 0;
@@ -61,6 +63,7 @@ header.header{
   z-index: 10;
 }
 
+/*====== 導覽列 ======*/
 
 img.logo_img{
   width: 120px;
@@ -84,13 +87,12 @@ div.nav_block{
 }
 
 a.logo_top{
-  margin-left: 40px;
+  width: 10%;
 }
 
 nav.nav{
-  width: 480px;
+  width: 50%;
   height: 60px;
-  margin: 0 50px 0 70px;
 }
 
 nav.nav ul.nav_list{
@@ -102,8 +104,6 @@ nav.nav ul.nav_list{
   justify-content: space-between;
   margin: 10px 0;
 }
-
-
 
 nav.nav ul.nav_list > li{
   display: inline-flex;
@@ -153,7 +153,6 @@ nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
   display: none;
 }
 
-
 nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a{
   display: inline-block;
   text-align: center;
@@ -170,14 +169,16 @@ nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:hove
 }
  
 
+
+/*====== 登入註冊區塊 ======*/
+
 div.login_signup_block{
-  width: 240px;
+  width: 20%;
   height: 60px;
-  /* margin-right: 40px; */
   display: flex;
+  justify-content: space-around;
   align-items: center;
   padding: 0;
-  /* border: 1px solid blue; */
 }
 
 div.container{
@@ -185,6 +186,34 @@ div.container{
   height: 100%;
 }
 
+button.btn_modal_login, button.btn_modal_signup{
+  width: 80px;
+  height: 40px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+  letter-spacing: 0.04em;
+}
+
+button.btn_modal_login:hover, button.btn_modal_signup:hover{
+  box-shadow: 1px 2px 2px 0px #00000040;
+}
+
+button.btn_modal_signup{
+  background-color: #2869D1;
+  color: white;
+}
+
+button.btn_modal_login{
+  background-color: #FFFFFF;
+  border: 1px solid #363B3F;
+}
+
+
+
+/*====== 行動版 RWD ======*/
 @media screen and (min-width: 320px) and (max-width: 768px){
   header.header{
     min-width: 100%;
@@ -200,6 +229,10 @@ div.container{
     width: 100%;
   }
 
+  div.nav_block{
+    position: relative;
+  }
+
   nav.nav{
     margin: 0;
     width: 100%;
@@ -208,16 +241,16 @@ div.container{
     top: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
     text-align: right;
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(40, 105, 209, 0.5) 348.45%);
+    position: absolute;
   }
 
-  div.nav_block{
-    position: relative;
+  nav.nav{
+    display: none;
   }
 
+  
   ul.nav_list {
     display: flex;
     flex-direction: column;
@@ -236,31 +269,25 @@ div.container{
     background-color: rgba(247, 204, 197, 0.5);
   }
 
-  nav.nav, div.login_signup_block{
-    margin-right: 0;
-    /* border: 1px solid red; */
-    position: absolute;
-    
-  }
+
   div.login_signup_block{
     width: 100%;
     flex-direction: column;
     text-align: center;
+    position: absolute;
+    top: 900%;
   }
 
-  div.login_signup_block div.mt-3{
-    width: 100%;
-    transform: translateY(820%);
+  button.btn_modal_login, button.btn_modal_signup{
+    width: 60%;
+    height: 36px;
+    margin-bottom: 2%;
+    padding: 5px 0;
   }
 
-  
-
-  div.login_signup_block button.btn_login{
-    background-color: #FFFFFF;
+  div.login_signup_block{
+    display: none;
   }
-
- 
-
 
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
@@ -297,26 +324,12 @@ div.container{
     height: 80px;
   }
 
-  /* span.triangle{
-    padding-bottom: 3px;
-    border-bottom: 1px solid black;
-  } */
+  
   span.triangle::after{
     display: none;
   }
 
-  nav.nav, div.login_signup_block div.mt-3{
-    display: none;
-  }
-
-
   div.hamburger{
     display: inline-flex;
   }
-  
-
-  div.nav_parent{
-    width: 100%;
-    /* border: 1px solid blue; */
-  }
-} 
+}
