--- a/css/header.css
+++ b/css/header.css
@@ -7,8 +7,9 @@
 }
 
 body { 
-  padding: 0 !important 
-}
+  margin: 0;
+  overflow-y: scroll; 
+} 
 
 /*回到最上方的按鈕*/
 #go_top{
@@ -213,8 +214,8 @@ button.btn_modal_login{
 
 
 
-/*====== 行動版 RWD ======*/
-@media screen and (min-width: 320px) and (max-width: 768px){
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
   header.header{
     min-width: 100%;
     justify-content: space-between;
@@ -222,10 +223,14 @@ button.btn_modal_login{
 
   a.logo_top{
     margin-left: 5%;
-    width: 80%;
+    width: 25%;
   }
 
   .navFixed{    
+    width: 100%;
+  }
+
+  div.nav_block{
     width: 100%;
   }
 
@@ -332,4 +337,62 @@ button.btn_modal_login{
   div.hamburger{
     display: inline-flex;
   }
+}
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+  header.header{
+    min-width: 100%;
+    justify-content: space-between;
+  }
+
+  div.nav_parent{
+    width: 100%;
+  }
+
+  a.logo_top{
+    margin-left: 5%;
+    width: 15%;
+  }
+
+  .navFixed{    
+    width: 100%;
+  }
+
+  div.nav_block{
+    width: 100%;
+  }
+
+  nav.nav{
+    width: 48%;
+    /* min-width: 320px; */
+  }
+
+  ul.nav_list li{
+    font-size: 14px;
+  }
+
+  nav.nav > ul.nav_list > li > div.solution_block{
+    padding: 5px 30px;
+  }
+
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
+    top: 32px;
+  }
+
+  div.login_signup_block{
+    width: 23%;
+    justify-content: center;
+    padding-bottom: 10px;
+  }
+
+  button.btn_modal_login, button.btn_modal_signup{
+    height: 35px;
+    width: 66px;
+    font-size: 14px;  
+    margin-right: 20px;
+  }
+  
 }
