--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,8 @@ img.scroll_down{
 } 
 
 
-@media screen and (min-width: 320px) and (max-width: 768px){
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
   div.index_first_banner_content{
     width: 100%;
     flex-direction: column;
@@ -119,6 +120,39 @@ img.scroll_down{
   }
 
 }
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+  div.index_first_banner{
+    min-width: 100%;
+    height: 500px;
+    margin: 0;
+  }
+
+  div.index_first_banner_content{
+    width: 90%;
+  }
+
+  div.banner_leftside{
+    width: 50%;
+  }
+  div.index_first_banner_slogan{
+    font-size: 34px;
+  }
+
+  img.start{
+    width: 50%;
+    height: 50%;
+  }
+
+  div.index_scroll_block{
+    margin: -20px 0 30px;
+  }
+
+}
+
+
 
 /*========= 步驟說明 =========*/
 
@@ -254,6 +288,7 @@ a.step_one_btn:hover{
 }
 
 /*====== 步驟 RWD ======*/
+/*====== 行動版 RWD | 320px ~ 768px ======*/
 @media screen and (min-width: 320px) and (max-width: 768px){
    
   div.steps_container{
@@ -276,12 +311,6 @@ a.step_one_btn:hover{
   }
 
   /*步驟一*/
-  div.step_one_block{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   div.step_one_block div.each_step_intro{
     order: 1;
     width: 90%;
@@ -300,13 +329,6 @@ a.step_one_btn:hover{
   }
 
   /*步驟二*/
-  div.step_two_block{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
   div.step_two_block div.each_step_intro{
     width: 90%;
     height: auto;
@@ -318,12 +340,6 @@ a.step_one_btn:hover{
   }
 
   /*步驟三*/
-  div.step_three_block{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   div.step_three_block div.each_step_intro{
     order: 1;
     width: 90%;
@@ -337,13 +353,6 @@ a.step_one_btn:hover{
   }
 
   /*步驟四*/
-  div.step_four_block{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
   div.step_four_block div.each_step_intro{
     width: 90%;
     height: auto;
@@ -355,12 +364,6 @@ a.step_one_btn:hover{
   }
 
   /*步驟五*/
-  div.step_five_block{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   div.step_five_block div.each_step_intro{
     order: 1;
     width: 90%;
@@ -380,6 +383,10 @@ a.step_one_btn:hover{
 
   div.step_one_block, div.step_two_block, div.step_three_block, div.step_four_block, div.step_five_block{
     margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   div.step_title_eng{
     padding-bottom: 3%;
@@ -388,6 +395,50 @@ a.step_one_btn:hover{
     padding-bottom: 3%;
   }  
   
+}
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+div.steps_container{
+    width: 100%;
+  }
+ 
+  div.steps_guide{
+    width: 100%;
+    margin-top: 5%;
+    justify-content: center;
+    padding-left: 10%;
+  }
+  div.steps_guide div.steps_intro{
+    font-size: 16px;
+    width: 100%;
+    min-width: 320px;
+    transform: translateX(-10%);
+  }
+  img.bird_guide{
+    height: 60px; 
+  }  
+
+  div.step_one_block, div.step_two_block, div.step_three_block, div.step_four_block, div.step_five_block{
+    width: 100%;
+    justify-content: center;
+  }
+  embed.step_img{
+    width: 60%;
+  }
+  div.each_step_intro{
+    padding: 0 16px;
+  }
+
+  div.step_title_eng, div.step_title_zh{
+    font-size: 26px;
+  }
+
+  div.step_direction{
+    font-size: 15px;
+  }
+
 }
 
 
@@ -408,7 +459,9 @@ div.steps_explore_block > div.steps_explore_info{
   letter-spacing: 0.04em;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px){
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
   div.steps_explore_block{
     width: 100%;
     text-align: center;
@@ -420,6 +473,20 @@ div.steps_explore_block > div.steps_explore_info{
   }
 }
 
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  div.steps_explore_block{
+    width: 100%;
+    text-align: center;
+    margin: 0 auto 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+}
 
 /*====== 加入社群 ======*/
 
@@ -485,15 +552,7 @@ button.slick-next.slick-arrow{
   right: 0;
 }
 
-/* embed.prev{
-  width: 30px;
-  left: 0;
-}
 
-embed.next{
-  width: 30px;
-  right: 0;
-} */
 
 .slick-prev.slick-arrow:before, .slick-next.slick-arrow:before{
   color: #616870;
@@ -502,185 +561,275 @@ embed.next{
   } 
 
 
-@media screen and (min-width: 320px) and (max-width: 768px){
-  div.index_community{
-    width: 100%;
+  /*====== 行動版 RWD | 320px ~ 768px ======*/  
+  @media screen and (min-width: 320px) and (max-width: 768px){
+    div.index_community{
+      width: 100%;
+    }
+    div.community_info{
+      width: 100%;
+    }
+    div.community_info_title, div.community_info_content{
+      width: 80%;
+    }
+    div.carousel_container{
+      max-width: 100vw;
+      width: 100%;
+      overflow: hidden;
+      /* border: 1px solid red; */
+    }
+    .carousel_box{
+      margin: 0 auto;
+    }
+
+    embed.img_slide{
+      max-width: 360px;
+    }
+    
   }
-  div.community_info{
-    width: 100%;
+
+  /*====== 行動版 RWD | 768px ~ 1200px ======*/  
+  @media screen and (min-width: 768px) and (max-width: 1199.98px){
+    div.index_community{
+      width: 100%;
+    }
+    div.community_info{
+      width: 100%;
+    }
+    div.community_info_title, div.community_info_content{
+      width: 80%;
+    }
+    div.carousel_container{
+      max-width: 100vw;
+      width: 100%;
+      overflow: hidden;
+      /* border: 1px solid red; */
+    }
+    .carousel_box{
+      margin: 0 auto;
+    }
+
+    embed.img_slide{
+      width: 320px;
+    }
   }
-  div.community_info_title, div.community_info_content{
-    width: 80%;
-  }
-  div.carousel_container{
-    max-width: 100vw;
-    width: 100%;
-    overflow: hidden;
-    /* border: 1px solid red; */
-  }
-  .carousel_box{
-    margin: 0 auto;
-  }
-  /* embed.img_slide{
-    min-width: 320px;
-  } */
-
-}
-
-/*====== 夢想地圖 ======*/
-
-div.comments_banner{
-  min-width: 1200px;
-  height: 570px;
-  background-image: linear-gradient(90deg, #FFFFFF 1.49%, rgba(60, 100, 177, 0.5) 91.49%);;
-  background-repeat: no-repeat;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 60px;
-}
-
-div.index_comments{
-  width: 1080px;
-}
-
-div.index_comments_title, div.hear_their_comments{
-  text-align: left;
-  padding: 10px 0;
-}
-
-div.index_comments_title{
-  font-size: 28px;
-  font-weight: 700;
-  letter-spacing: 0.1em;
-  width: 100%;
-}
-
-div.hear_their_comments{
-  letter-spacing: 0.1em;
-  width: 125px;
-  border-bottom: 1px solid black;
-  line-height: 90%;
-  margin-bottom: 30px;
-}
-
-div.comments_container_top, div.comments_container_middle, div.comments_container_bottom{
-  padding: 25px 0;
-  width: 100%;
-}
-
-a.comment_link{
-  padding: 10px 25px;
-  text-decoration: none;
-  color: black;
-  background-color: white;
-  border-radius: 30px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin: 0 5px;
-  letter-spacing: 0.04em;
-}
-
-a.comment_link:hover{
-  color: white;
-  background-color: #2869D1;
-}
-
-
-@media screen and (min-width: 320px) and (max-width: 768px){
+  
+  /*====== 夢想地圖 ======*/
+  
   div.comments_banner{
-    min-width: 100%;
-    height: auto;
-    flex-direction: column;
-    align-items: center;
-  }
-  div.index_comments{
-    width: 90%;
-    margin-top: 60px;
-  }
-  div.index_comments_title{
-    font-size: 24px;
-  }
-  div.comments_container_top{
-    margin-top: 40px;
-  }
-  div.comments_container_bottom{
-    margin-bottom: 40px;
-  }
-  div.comments_container_top, div.comments_container_middle, div.comments_container_bottom{
+    min-width: 1200px;
+    height: 570px;
+    background-image: linear-gradient(90deg, #FFFFFF 1.49%, rgba(60, 100, 177, 0.5) 91.49%);;
+    background-repeat: no-repeat;
+    text-align: center;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 0;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px;
   }
+  
+  div.index_comments{
+    width: 1080px;
+  }
+  
+  div.index_comments_title, div.hear_their_comments{
+    text-align: left;
+    padding: 10px 0;
+  }
+  
+  div.index_comments_title{
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    width: 100%;
+  }
+  
+  div.hear_their_comments{
+    letter-spacing: 0.1em;
+    width: 125px;
+    border-bottom: 1px solid black;
+    line-height: 90%;
+    margin-bottom: 30px;
+  }
+  
+  div.comments_container_top, div.comments_container_middle, div.comments_container_bottom{
+    padding: 25px 0;
+    width: 100%;
+  }
+  
   a.comment_link{
-    /* width: 80%; */
-    margin-bottom: 25px;
-    font-size: 15px;
+    padding: 10px 25px;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 0 5px;
+    letter-spacing: 0.04em;
   }
-}
-
-/*====== 加入行列 ======*/
-
-div.index_bottom_block{
-  /* border: 1px solid black; */
-  width: 1080px;
-  margin: 0 auto;
-  text-align: center;
-  position: relative;
-}
-
-div.join_us_slogan{
-  padding-top: 50px;
-  padding-bottom: 40px;
-  font-size: 18px;
-  letter-spacing: 0.1em;
-}
-
-button.join{
-  background-color: #2869D1;
-  padding: 6px 18px 8px;
-  border-radius: 8px;
-  color: white;
-  text-decoration: none;
-  text-align:center;
-  letter-spacing: 0.1em;
-  font-size: 15px;
-  margin-top: -20px;
-  width: 120px;
-
-}
-
-button.join:hover{
-  box-shadow: 1px 2px 2px 0px #00000040;
-  color: white;
-}
-
-div.bird_stand{
-  width: 80%;
-  margin: 0 auto;
-  position: relative;
-  text-align: left;
-  transform: translateY(27%);
-}
-
-img.standing_bird{
-  width: 130px;
-  /* position: absolute; */
-  /* transform: translate(-270%, -15px); */
-}
+  
+  a.comment_link:hover{
+    color: white;
+    background-color: #2869D1;
+  }
+  
+  
+  /*====== 行動版 RWD | 320px ~ 768px ======*/  
+  @media screen and (min-width: 320px) and (max-width: 767.98px){
+    div.comments_banner{
+      min-width: 100%;
+      height: auto;
+      flex-direction: column;
+      align-items: center;
+    }
+    div.index_comments{
+      width: 90%;
+      margin-top: 60px;
+    }
+    div.index_comments_title{
+      font-size: 24px;
+    }
+    div.comments_container_top{
+      margin-top: 40px;
+    }
+    div.comments_container_bottom{
+      margin-bottom: 40px;
+    }
+    div.comments_container_top, div.comments_container_middle, div.comments_container_bottom{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 0;
+    }
+    a.comment_link{
+      /* width: 80%; */
+      margin-bottom: 25px;
+      font-size: 15px;
+    }
+  }
 
 
-@media screen and (min-width: 320px) and (max-width: 768px){
+  /*====== 行動版 RWD | 768px ~ 1200px ======*/  
+  @media screen and (min-width: 768px) and (max-width: 1199.98px){
+    div.comments_banner{
+      min-width: 100%;
+      height: auto;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    div.index_comments{
+      width: 90%;
+      margin-top: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    div.index_comments_title{
+      font-size: 26px;
+      text-align: center;
+
+    }
+    
+    div.comments_container_top{
+      margin-top: 20px;
+    }
+    div.comments_container_bottom{
+      margin-bottom: 40px;
+    }
+    div.comments_container_top, div.comments_container_middle, div.comments_container_bottom{
+      display: flex;
+      flex-direction: column;
+      width: 80%;
+      padding: 0;
+    }
+    a.comment_link{
+      /* width: 80%; */
+      margin-bottom: 25px;
+      font-size: 15px;
+    }
+  }  
+  
+  /*====== 加入行列 ======*/
+  
   div.index_bottom_block{
-    width: 100%;
+    /* border: 1px solid black; */
+    width: 1080px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
   }
+  
   div.join_us_slogan{
-    font-size: 16px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    font-size: 18px;
+    letter-spacing: 0.1em;
   }
-
+  
+  button.join{
+    background-color: #2869D1;
+    padding: 6px 18px 8px;
+    border-radius: 8px;
+    color: white;
+    text-decoration: none;
+    text-align:center;
+    letter-spacing: 0.1em;
+    font-size: 15px;
+    margin-top: -20px;
+    width: 120px;
+    
+  }
+  
+  button.join:hover{
+    box-shadow: 1px 2px 2px 0px #00000040;
+    color: white;
+  }
+  
+  div.bird_stand{
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    text-align: left;
+    transform: translateY(27%);
+  }
+  
   img.standing_bird{
-    width: 100px;
-    transform: translateY(4px);
+    width: 130px;
+    /* position: absolute; */
+    /* transform: translate(-270%, -15px); */
   }
-}
+  
+
+  /*====== 行動版 RWD | 320px ~ 768px ======*/  
+  @media screen and (min-width: 320px) and (max-width: 768px){
+    div.index_bottom_block{
+      width: 100%;
+    }
+    div.join_us_slogan{
+      font-size: 16px;
+    }
+    
+    img.standing_bird{
+      width: 100px;
+      transform: translateY(4px);
+    }
+  } 
+
+
+  /*====== 行動版 RWD | 768px ~ 1200px ======*/  
+  @media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+    div.index_bottom_block{
+      width: 100%;
+    }
+    div.join_us_slogan{
+      font-size: 16px;
+    }
+    
+    img.standing_bird{
+      width: 100px;
+      transform: translateY(4px);
+    }
+
+  }   
