--- a/css/about.css
+++ b/css/about.css
@@ -11,41 +11,102 @@ body{
   font-family: 'Noto Sans TC', sans-serif;
   letter-spacing: 0.04em;
 }
+ 
+img, embed{
+  max-width: 100%;
+}
 
+div.flex_container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+
+/*====== 進場 banner ======*/
 
 div.first_banner{
   /* border: 1px solid black; */
   text-align: center;
-  margin: 110px auto 0;
+  margin: 60px auto 0;
   width: 1080px;
-  height: 505px;
+  height: auto;
   position: relative;
   z-index: -1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 div.first_banner_title{
   font-size: 28px;
   font-weight: 700;
   padding: 20px 0 0;
+  height: 60px;
+  position: absolute;
+  top: 6%;
 }
 
 div.first_banner_subtitle{
   padding: 10px 0;
+  height: 50px;
+  position: absolute;
+  top: 18%;
 }
 
 img.dreamer{
   width: 900px;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  transform: translate(-50%, -9.7%);
   z-index: -2;
 }
+
+ 
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+  div.first_banner{
+    margin: 80px auto 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  div.first_banner_title{
+    font-size: 25px;
+    padding-top: 20px;
+    top: 3%;
+  }
+  div.first_banner_subtitle{
+    font-size: 14px;
+    padding-top: 20px;
+    top: 15%;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  div.first_banner{
+    width: 100%;
+  }
+  
+  div.first_banner_title{
+    padding-top: 20px;
+  }
+ 
+}
+
+
+/*====== 我們的使命 ======*/
 
 div.mission_block{
   /* border: 1px solid red; */
   text-align: center;
   margin: 0 auto;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 div.our_mission{
@@ -56,7 +117,7 @@ div.our_mission{
   justify-content: center;
   align-items: center;
   /* margin-bottom: 60px; */
-  min-width: 1200px;
+  min-width: 100%;
   background-image: linear-gradient(180deg, #F7CCC5 0%, rgba(247, 204, 197, 0) 100%);
 }
 
@@ -128,7 +189,7 @@ a.tool_link{
 
 div.go_signup{
   width: 1080px;
-  margin: 30px auto 40px;
+  margin: 0px auto 40px;
   padding: 40px 0;
   line-height: 3;
   text-align: center;
@@ -144,7 +205,7 @@ div.go{
   padding-top: 30px;
 }
  
-button.btn_act{
+button.start{
   background-color: #2869D1;
   padding: 6px 18px 8px;
   border-radius: 8px;
@@ -156,13 +217,116 @@ button.btn_act{
   width: 115px;
 }
 
-button.btn_act:hover{
+button.start:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
 
 
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+  div.mission_block{
+    width: 100%;
+  }
+  div.our_mission{
+    min-width: 100%;
+  }
+
+  div.mission_title{
+    font-size: 26px;
+  }
+
+  div.mission_intro{
+    font-size: 14px;
+  }
+
+  div.brand_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.feature_row{
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+  }
+
+  div.row_card{
+    margin: -60px auto -30px;
+  }
+
+  div.card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.card_text{
+    font-size: 15px;
+    width: 83%;
+  }
+
+  div.go_signup{
+    width: 100%;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  
+  div.mission_block{
+    width: 100%;
+  }
+  div.our_mission{
+    min-width: 100%;
+  }
+
+  div.mission_title{
+    font-size: 26px;
+  }
+
+  div.mission_intro{
+    font-size: 15px;
+  }
+
+  div.brand_feature_block{
+    width: 100%;
+    /* display: flex;
+    flex-direction: column; */
+  }
+
+  div.feature_row{
+    width: 100%;
+    height: auto;
+  }
+
+  div.row_card{
+    width: 50%;
+    margin: -60px auto -50px;
+  }
+
+  div.card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.card_text{
+    font-size: 15px;
+    width: 75%;
+  }
+
+  div.go_signup{
+    width: 100%;
+  }
+
+
+}
+
+
+/*====== 我們的團隊 ======*/
+
 div.our_team{
-  /* width: 1080px; */
   margin: 0 auto;
   text-align: center;
   display: flex;
@@ -196,30 +360,29 @@ div.team_row_card{
   flex-direction: column;
   align-items: center;
   text-align: center;
-  justify-content: space-around;
+  justify-content: center;
   border-radius: 30px;
   background-color: rgba(238, 238, 238, .7);
-  width: 500px;
-  height: 450px
-;
+  width: 48%;
+  height: 30%;
   margin-top: 60px;
 }
 
 img.team_img{
-  width: 450px;
+  width: 400px;
 }
 
 div.team_card_title{
   font-size: 28px;
   font-weight: 700;
   position: relative;
-  top: 80px;
+  top: 60px;
 }
 
 div.team_card_text{
   width: 436px;
   position: relative;
-  bottom: 80px;
+  bottom: 60px;
 }
 
 div.learn_more{
@@ -236,6 +399,116 @@ a.hr_src{
   border-bottom: 1px solid #2869D1;
 }
 
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  div.our_team{
+    min-width: 100%;
+  }
+  div.team_title{
+    font-size: 26px;
+  }
+
+  div.team_intro{
+    font-size: 14px;
+  }
+
+  div.team_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.team_row{
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 30px;
+  }
+
+  div.team_row_card{
+    width: 100%;
+    max-width: 500px;
+    margin-top: 30px;
+  }  
+
+  div.team_card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.team_card_text{
+    font-size: 15px;
+    width: 83%;
+  }
+
+  div.learn_more{
+    width: 100%;
+    margin: -60px auto 60px;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+  div.our_team{
+    min-width: 100%;
+  }
+  /* div.team_title{
+    font-size: 26px;
+  }
+
+  div.team_intro{
+    font-size: 15px;
+  } */
+
+  div.team_feature_block{
+    width: 100%;
+    /* display: flex;
+    flex-direction: column; */
+  }
+
+  div.team_row{
+    width: 100%;
+    /* flex-direction: column; */
+    height: auto;
+    margin-bottom: 30px;
+  }
+
+  div.team_row_card{
+    min-width: 360px;
+    min-height: 324px;
+    margin-top: 30px;
+  }  
+
+  img.team_img{
+    width: 320px;
+    height: 320px;
+  }
+
+  div.team_card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.team_card_text{
+    font-size: 15px;
+    width: 83%;
+  }
+
+  div.learn_more{
+    width: 100%;
+    margin: -60px auto 60px;
+  }
+  
+}
+
+
+/*====== 訂閱 set up ======*/
+
 div.subscribe_block{
   margin: 0 auto 80px;
   text-align: center;
@@ -244,7 +517,7 @@ div.subscribe_block{
   justify-content: center;
   align-items: center;
   /* margin-bottom: 60px; */
-  min-width: 1200px;
+  min-width: 100%;
   height: 400px;
   background-image: linear-gradient(90deg, rgba(242, 77, 46, 0.5) 1.49%, rgba(60, 100, 177, 0.5) 91.49%);
 }
@@ -282,6 +555,7 @@ input.follow:focus, input[type="email"]:active{
   font-family: 'Noto Sans TC', sans-serif;
   border: none;
   outline: none;
+  border: 2px solid #2869D1;
 }
 
 button.sub_btn{
@@ -299,4 +573,32 @@ button.sub_btn{
 
 button.sub_btn:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
+}
+
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  div.subscribe_title{
+    font-size: 24px;
+  }
+
+  input.follow{
+    width: 100%;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+  div.subscribe_title{
+    font-size: 26px;
+  }
+
+  input.follow{
+    width: 100%;
+  }
+
 }
