--- a/css/about.css
+++ b/css/about.css
@@ -233,6 +233,7 @@ button.start:hover{
 
   div.mission_title{
     font-size: 26px;
+    width: 100%;
   }
 
   div.mission_intro{
@@ -269,6 +270,10 @@ button.start:hover{
     width: 100%;
   }
 
+  div.go{
+    width: 100%;
+  }
+
 }
 
 
@@ -284,6 +289,7 @@ button.start:hover{
 
   div.mission_title{
     font-size: 26px;
+    width: 100%;
   }
 
   div.mission_intro{
@@ -317,6 +323,10 @@ button.start:hover{
   }
 
   div.go_signup{
+    width: 100%;
+  }
+
+  div.go{
     width: 100%;
   }
 
@@ -407,7 +417,8 @@ a.hr_src{
     min-width: 100%;
   }
   div.team_title{
-    font-size: 26px;
+    font-size: 24px;
+    width: 100%;
   }
 
   div.team_intro{
@@ -448,6 +459,10 @@ a.hr_src{
     margin: -60px auto 60px;
   }
 
+  a.hr_src{
+    font-size: 14px;
+  }
+
 }
 
 
@@ -457,14 +472,11 @@ a.hr_src{
   div.our_team{
     min-width: 100%;
   }
-  /* div.team_title{
-    font-size: 26px;
+  div.team_title{
+    width: 100%;
   }
 
-  div.team_intro{
-    font-size: 15px;
-  } */
-
+ 
   div.team_feature_block{
     width: 100%;
     /* display: flex;
@@ -479,8 +491,8 @@ a.hr_src{
   }
 
   div.team_row_card{
-    min-width: 360px;
-    min-height: 324px;
+    /* min-width: 360px;
+    min-height: 324px; */
     margin-top: 30px;
   }  
 
@@ -503,6 +515,8 @@ a.hr_src{
     width: 100%;
     margin: -60px auto 60px;
   }
+
+  
   
 }
 
@@ -580,7 +594,11 @@ button.sub_btn:hover{
 @media screen and (min-width: 320px) and (max-width: 767.98px){
 
   div.subscribe_title{
-    font-size: 24px;
+    font-size: 20px;
+  }
+
+  div.subscribe_text{
+    font-size: 14px;
   }
 
   input.follow{
