--- a/css/about.css
+++ b/css/about.css
@@ -135,6 +135,8 @@ div.mission_intro, div.team_intro{
   /* border: 1px solid red; */
   line-height: 250%;
   padding: 20px 0 0;
+  width: 62%;
+  
 }
 
 div.brand_feature_block{
@@ -238,6 +240,7 @@ button.start:hover{
 
   div.mission_intro{
     font-size: 14px;
+    width: 87%;
   }
 
   div.brand_feature_block{
@@ -262,7 +265,7 @@ button.start:hover{
   }
 
   div.card_text{
-    font-size: 15px;
+    font-size: 14px;
     width: 83%;
   }
 
@@ -348,6 +351,10 @@ div.our_team{
   background-image: linear-gradient(180deg, #B3D0FF 0%, rgba(179, 208, 255, 0) 100%);
 }
 
+div.team_intro{
+  width: 60%;
+}
+
 div.team_feature_block{
   margin: 40px auto 40px;
   /* border: 1px solid blue; */
@@ -423,6 +430,7 @@ a.hr_src{
 
   div.team_intro{
     font-size: 14px;
+    width: 83%;
   }
 
   div.team_feature_block{
@@ -476,6 +484,9 @@ a.hr_src{
     width: 100%;
   }
 
+  div.team_intro{
+    font-size: 15px;
+  }
  
   div.team_feature_block{
     width: 100%;
